# secretsweep

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  secretsweep.toml
.github/workflows/: ci.yml  release.yml
src/secretsweep/: cli.py  config.py  gitutils.py  models.py  scanner.py
tests/: test_cli.py
